docs/am/4.9/guides/identity-providers/social-identity-providers/linkedin.md
---
description: Authenticate Access Management 4.9 users with LinkedIn. Follow the steps to register a LinkedIn application and set up the connection.
---

# LinkedIn

## Overview

You can authenticate users in AM with LinkedIn. Before you begin, you need to sign up for a [LinkedIn Developer account](https://www.linkedin.com/developers).

## Steps

To connect your application to LinkedIn, you will:

* Register a new application in LinkedIn
* Create a LinkedIn identity provider in AM
* Set up the connection in LinkedIn
* Test the connection

## Register a new application in LinkedIn

Go to [Create app](https://www.linkedin.com/developers) in the LinkedIn Developer Portal.

1. Give your application a name, a LinkedIn page and a logo.
2. Click **Create app**.

{% hint style="info" %}
LinkedIn will generate a Client ID and Client Secret for your application. Make a note of them for later use.
{% endhint %}

## Create a LinkedIn identity provider

1. Log in to AM Console.
2. Click **Settings > Providers**.
3. Click the plus icon ![plus icon](../../../.gitbook/assets/plus-icon.png).
4. Select **LinkedIn** as your identity provider type and click **Next**.

{% hint style="info" %}
Ensure you have the Client ID and Client Secret generated by LinkedIn to hand.
{% endhint %}

5. Give your identity provider a name.
6. Enter your LinkedIn Client ID and Client Secret.
7.  Click **Create**.

    <figure><img src="../../../.gitbook/assets/graviteeio-am-userguide-social-idp-linkedin.png" alt="The LinkedIn identity provider Settings tab, with a client ID and secret and the r_emailaddress and r_liteprofile scopes selected, beside the redirect URI to configure."><figcaption><p>Create LinkedIn IdP</p></figcaption></figure>

{% hint style="info" %}
Copy the URL in **1. Configure the Redirect URI** to the right of the page. You need this value to update your LinkedIn application settings in the next section.
{% endhint %}

{% hint style="info" %}
HTTP client settings apply whether or not HTTP/2 is enabled, but they may affect different request characteristics. In particular, the `HTTP Client max pool size` setting limits the number of concurrent connections, but allows a higher number of concurrent requests with multiplexed HTTP/2 connections. See also [Configure HTTP clients](../../../getting-started/configuration/configure-am-gateway/README.md#configure-http-clients).
{% endhint %}

## Set up the connection

Go to your LinkedIn application settings and edit the **Auth** section.

1. Add an **Authorized redirect URLs for your app** with the Redirect URI created in the previous step.
2. Click **Update**.
3. Go to **Products** section and select **Sign In with LinkedIn**.

## Test the connection

You can test your LinkedIn connection using a web application created in AM.

1.  In AM Console, click **Applications** and select your social identity provider.

    <figure><img src="../../../.gitbook/assets/graviteeio-am-userguide-social-idp-list.png" alt="The Identity Providers tab of an application, listing Azure AD, Mongo DB, Facebook, France Connect, Github, Google, Inline, LDAP, LinkedIn, OpenID, Salesforce, and Twitter providers, each with a toggle."><figcaption><p>Select LinkedIn IdP</p></figcaption></figure>
2. Call the Login page (the `/oauth/authorize` endpoint). If the connection is working you will see a **Sign in with** button.

If the button is not visible, there may be a problem with the identity provider settings. Check the AM Gateway log for more information.

<figure><img src="../../../.gitbook/assets/graviteeio-am-userguide-social-idp-login.png" alt="The hosted Sign in page with Username and Password fields above social sign-in buttons for OpenID Connect, Facebook, Azure AD, and Github."><figcaption><p>Sign in options</p></figcaption></figure>
